[gd_scene load_steps=5 format=3 uid="uid://cwkyfqw11qafe"]

[ext_resource type="Script" path="res://MainScreenMenus/MainScreenScripts/GalleryMenu.gd" id="1_6svyu"]
[ext_resource type="Theme" uid="uid://2u7lnkn35v0c" path="res://GlobalTheme.tres" id="1_ybm1h"]
[ext_resource type="Texture2D" uid="uid://5w5qtugexeuh" path="res://icon.svg" id="3_qsufg"]

[sub_resource type="LabelSettings" id="LabelSettings_ol2p2"]
font_size = 20

[node name="GalleryMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6svyu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_ybm1h")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 45.0
offset_right = 136.0
offset_bottom = 110.0
text = "<"

[node name="LeftButton" type="Button" parent="."]
layout_mode = 0
offset_left = 433.0
offset_top = 932.0
offset_right = 580.0
offset_bottom = 1011.0
text = "<"

[node name="RightButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1169.0
offset_top = 934.0
offset_right = 1328.0
offset_bottom = 1015.0
text = ">"

[node name="GalleryImage" type="Sprite2D" parent="."]
visible = false
position = Vector2(896, 493)
texture = ExtResource("3_qsufg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 495.0
offset_top = 78.0
offset_right = 1305.0
offset_bottom = 215.0
label_settings = SubResource("LabelSettings_ol2p2")
horizontal_alignment = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
